# ProbDesk

./: .env.example  .gitignore  DESIGN.md  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: PROJECT_PROPOSAL.md  adk-agents-architecture.md  execution-simulator-package.md  tactical-policy-cli-scripts.md
prob_desk/: __init__.py  __main__.py  agent.py  agui_server.py  cli.py  desk_settings.py  env_loader.py  main.py
prob_desk/agents/: __init__.py  adk_app.py  prompts.py  root_agent.py  runner_plugins.py  runtime_settings.py
prob_desk/agents/subagents/: __init__.py  execution.py  quant.py  risk.py  sentiment.py
prob_desk/agents/tools/: __init__.py  agentphone_mcp.py  kalshi_api.py  kalshi_sdk_client.py  kalshi_sdk_tools.py  kalshi_search.py  kalshi_stream.py  tactical_policy.py
prob_desk/execution/: __init__.py  baselines.py  env.py  metrics.py  policy_net.py  replay.py  rollout.py  schemas.py  tactical_policy.example.yaml
scripts/: run-adk-web.sh  setup.sh
scripts/execution/: benchmark_policy_inference.py  eval_execution.py  train_tactical_policy.py
secrets/kalshi/: README.md  private_key.pem.example
tests/: test_desk_settings.py  test_kalshi_search.py
tests/agents/: test_agentphone_mcp.py  test_director_tools.py  test_kalshi_stream.py  test_kalshi_tools_dedupe.py  test_runner_plugins.py
tests/execution/: test_env.py
ui/: README.md  next.config.ts  package-lock.json  package.json  vercel.json
ui/scripts/: run-agent.sh  verify-copilotkit-connection.sh
ui/src/: instrumentation.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: AgentPhoneSetupSection.tsx  AgentToolTrace.tsx  ClientDeskPage.tsx  ClientProviders.tsx  CopilotRoot.tsx  CopilotStyles.tsx  DeskAgentPhoneChatPanel.tsx  DeskAgentPhoneFlow.tsx  DeskAgentPhoneMessage.tsx  DeskAgentPhoneSetupCard.tsx  DeskAgentPhoneSmsForm.tsx  (+37 more)
(+39 files in other folders)
